# EasyAL

./: ALRun.py  BaseModel.py  Evaluation.py  GroceriesDataset.py  LICENSE  LossModel.py  LossPredictBaseModel.py  MEBaseModel.py  ModelConstructor.py  MultiTransformDataset.py  NoisyStudent.py  NoisyStudentBaseModel.py  README.md  TEBaseModel.py  TEModel.py  TowOutputClassifier.py  TowOutputModel.py  TwoOutputClassifier.py  documentation.md  pyproject.toml  query_strategy.py  readme.txt  run.py  run_vis.py  test_split_all.txt  train_split_all.txt  utils.py
docs/: README.md  _sidebar.md  configuration.md  datatransformation.md  documentation.md  index.html  references.md
example/: ALRun.py  GroceriesDataset.py
example/my-project/: config.json  config.xml  source.json  tasks.json
example/my-project/completions/: 0.json  1.json
