[tool.poetry]
name = "capstone-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
torch = "^1.7.1"
torchvision = "^0.8.2"
sklearn = "^0.0"
matplotlib = "^3.3.3"
scipy = "^1.5.4"
tqdm = "^4.54.1"
pandas = "^1.1.5"
seaborn = "^0.11.0"
tensorflow = "^2.4.0"
opencv-python = "^4.4.0"
label-studio = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
